somewhat fix context menu on mobile viewer dom still cannot cancel menu on viewer dom

--- a/app/elements/lmv-context-menu/lmv-context-menu.scss
+++ b/app/elements/lmv-context-menu/lmv-context-menu.scss
@@ -6,9 +6,6 @@
 
   min-width: 120px;
   position: fixed;
-  top: 0;
-  left: 0;
-
   display: none;
 }
 
